--- a/package.json
+++ b/package.json
@@ -1,34 +1,20 @@
 {
-  "name": "tripgoing",
+  "name": "codeit-hack-app",
   "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "start": "react-scripts start"
+  },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.19.3",
     "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "react-modal": "^3.16.1",
+    "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
+    "react-big-calendar": "^1.13.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
-    "styled-components": "^6.1.12",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.12"
   },
   "browserslist": {
     "production": [
@@ -41,6 +27,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
